--- a/about.html
+++ b/about.html
@@ -29,9 +29,8 @@
         <div class="banner-text">
           <h1>Founder of Steak Gacor</h1>
           <h2>Jimmy Maulana</h2>
-          <h3>09021182227012</h3>
-          <p>"Jika ingin menjadi pengusaha sukses tetapi tidak punya modal uang, gunakan saja modal dengkulmu untuk menjadi pengusaha sukses".</p>
-          
+          <h3>09021182227017</h3>
+          <p>"Berikan aku sepuluh pemuda maka akan kuguncang dunia"</p>
           <article class="service">
         <div class="box">
         <i class="fa-brands fa-facebook"></i>
@@ -53,24 +52,20 @@
         </div>
         <div class="banner-img">
           <!-- Refrensi -->
-          <a target="_blank" href="https://unsplash.com/photos/man-in-white-button-up-shirt-and-black-vest-FMh5o5m5N9E">
             <img src="assets/img/Jimmy_maulana-removebg-preview.png" alt="Founder">
-          </a>
         </div>
       </article>
 
       <article class="banner2" id="back">
         <div class="banner-img2">
           <!-- Refrensi -->
-          <a target="_blank" href="https://unsplash.com/photos/man-in-white-button-up-shirt-and-black-vest-FMh5o5m5N9E">
             <img src="assets/img/kisep-removebg-preview.png" alt="Founder">
-          </a>
         </div>
         <div class="banner-text2">
           <h1>President of Steak Gacor</h1>
           <h2>M. Rizki Sepriadi</h2>
           <h3>09021282227040</h3>
-          <p>"Jika ingin menjadi pengusaha sukses tetapi tidak punya modal uang, gunakan saja modal dengkulmu untuk menjadi pengusaha sukses".</p>
+          <p>"Kamu tidak butuh kata-kata motivasi, yang kamu butuhkan adalah kata 'diskon Steam 90%'."</p>
           <article class="service">
             <div class="box">
             <i class="fa-brands fa-facebook"></i>
@@ -98,7 +93,7 @@
           <h1>Vice President of Steak Gacor</h1>
           <h2>M. Akbar Kevin</h2>
           <h3>09021282227048</h3>
-          <p>"Jika ingin menjadi pengusaha sukses tetapi tidak punya modal uang, gunakan saja modal dengkulmu untuk menjadi pengusaha sukses".</p>
+          <p>"Bekerja saat mereka tidur, menabung saat mereka menghamburkan, belajar saat mereka berpesta, menikmati hidup saat mereka bermimpi."</p>
           <article class="service">
             <div class="box">
             <i class="fa-brands fa-facebook"></i>
@@ -120,7 +115,6 @@
         </div>
         <div class="banner-img3">
           <!-- Refrensi -->
-          <a target="_blank" href="https://unsplash.com/photos/man-in-white-button-up-shirt-and-black-vest-FMh5o5m5N9E">
             <img src="assets/img/kevins.png" alt="Founder">
           </a>
         </div>
